Fix TOC collapse button alignment by removing extra padding in collapsed state

--- a/docusaurus/src/components/CollapsibleTOC/CollapsibleTOC.module.scss
+++ b/docusaurus/src/components/CollapsibleTOC/CollapsibleTOC.module.scss
@@ -24,7 +24,7 @@
 
 .collapsed {
   border-left: none;
-  padding: 8px 0;
+  padding: 0;
   display: flex;
   align-items: flex-start;
   justify-content: center;
